--- a/group.html
+++ b/group.html
@@ -68,14 +68,16 @@
     <div id="page">
 
      	 <h1>Group</h1>
-
-
-   		<h4>Current students</h4>
-  		 <li>Elsie Cortes (undergraduate student)</li>
-		 <li>Benjamin Latham (graduate student)</li>
-		 <li>Lori Lewis (master's student, co-advised)</li>
-		 <li>Matteo Polimeno (graduate student)</li>
-		 <li>Ryan Torres(undergraduate student)</li>
+		
+		<h4>Postdocs</h4>
+		 <li>Zois Moitier</li>
+	   <h4>Graduate students</h4>
+	 <li>Benjamin Latham</li>
+	 <li>Lori Lewis (master's student, co-advised)</li>
+	 <li>Matteo Polimeno</li>
+	   <h4>Undergraduate students</h4>
+  		 <li>Elsie Cortes</li>
+		 <li>Ryan Torres</li>
 
 		 <h4>Alumni</h4>
 		 <li>Bianca Garibay (undergraduate student)</li>
@@ -84,7 +86,7 @@
 		 <li>Jacob Stehle (undergraduate student, co-advised)</li>
 
 
-		 <h4>Our mascott</h4>
+		 <h4>Mascott</h4>
 		 <img src="img/photos/guy.jpg" width="200">
 
        
