changed group page

--- a/group.html
+++ b/group.html
@@ -70,14 +70,14 @@
      	 <h1>Group</h1>
 		
 		<h4>Postdocs</h4>
-		 <li>Zois Moitier</li>
+		 <li><img src="img/zois.png" width="100">   Zois Moitier</li>
 	   <h4>Graduate students</h4>
-	 <li>Benjamin Latham</li>
-	 <li>Lori Lewis (master's student, co-advised)</li>
-	 <li>Matteo Polimeno</li>
+	 <li><img src="img/photos/guy.jpg" width="100">   Benjamin Latham</li>
+	 <li><img src="img/llewis.jpeg" width="100">   Lori Lewis (master's student, co-advised)</li>
+	 <li><img src="img/photos/guy.jpg" width="100">   Matteo Polimeno</li>
 	   <h4>Undergraduate students</h4>
-  		 <li>Elsie Cortes</li>
-		 <li>Ryan Torres</li>
+  		 <li><img src="img/photos/guy.jpg" width="100">   Elsie Cortes</li>
+		 <li><img src="img/photos/guy.jpg" width="100">   Ryan Torres</li>
 
 		 <h4>Alumni</h4>
 		 <li>Bianca Garibay (undergraduate student)</li>
@@ -86,8 +86,7 @@
 		 <li>Jacob Stehle (undergraduate student, co-advised)</li>
 
 
-		 <h4>Mascott</h4>
-		 <img src="img/photos/guy.jpg" width="200">
+		 
 
        
 
