cloned repo on new mac, updated publis, group, teaching

--- a/Teaching.html
+++ b/Teaching.html
@@ -66,6 +66,10 @@
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
+  		<h2>Spring 2020 </h2>
+          <ul>
+  		  <li>Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=6&coid=12511"> Math 150</a>: Mathematical modeling, at UC Merced</li>
+		    </ul>
 		<h2>Fall 2019 </h2>
         <ul>
 		  <li>Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2164"> Math 122</a>: complex analysis, at UC Merced</li>
