--- a/group.html
+++ b/group.html
@@ -74,16 +74,19 @@
 	   <h4>Graduate students</h4>
 	 <li><img src="img/photos/guy.jpg" width="100">   Benjamin Latham</li>
 	 <li><img src="img/llewis.jpeg" width="100">   Lori Lewis (master's student, co-advised)</li>
-	 <li><img src="img/photos/guy.jpg" width="100">   Matteo Polimeno</li>
 	   <h4>Undergraduate students</h4>
-  		 <li><img src="img/photos/guy.jpg" width="100">   Elsie Cortes</li>
-		 <li><img src="img/photos/guy.jpg" width="100">   Ryan Torres</li>
-
+  		 <li><img src="img/photos/guy.jpg" width="100">   You</li>
+		
 		 <h4>Alumni</h4>
-		 <li>Bianca Garibay (undergraduate student)</li>
-		 <li>Barbara Gomez-Aldrete (undergraduate student, UROC program, co-advised)</li>
-		 <li>Xiaolong Chen (undergraduate student)</li>
-		 <li>Jacob Stehle (undergraduate student, co-advised)</li>
+		 <li>Elsie Cortes (undergraduate student, a year)</li>
+		 <li>Ryan Torres (undergraduate student, 1 semester)</li>
+		 <li>Bianca Garibay (undergraduate student, 1 semester)</li>
+		 <li>Barbara Gomez-Aldrete (undergraduate student, UROC program, co-advised, summer)</li>
+		 <li>Xiaolong Chen (undergraduate student, summer)</li>
+		 <li>Jacob Stehle (undergraduate student, co-advised, summer)</li>
+		 <h4>Previous Graduate Mentoring</h4>
+		 <li>Matteo Polimeno (1 semester)</li>
+		  <li>Majerle Reeves (2 semesters)</li>
 
 
 		 
