--- a/publis.html
+++ b/publis.html
@@ -81,15 +81,15 @@
   			<ol class='publisItems' reversed = "">
 				<li >
 					A fully fourth order accurate energy stable FDTD method for Maxwell's equations in metamaterials, <br>
-			 <span class='author'>P. Sakkaplangkul</span>, <span class='author'>V. Bokil</span>, <span class='author'>C. Carvalho</span>, in revision. </span>
+			 <span class='author'>P. Sakkaplangkul</span>, <span class='author'>V. Bokil</span>, <span class='author'>C. Carvalho</span>, IEEE Journal on Multiscale and Multiphysics Computational Techniques, 4(2019), pp.260--268. </span>
 				</li>
 			<li >
 				Asymptotic approximations for the close evaluation of double-layer potentials, <br>
-		 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, in revision. </span>
+		 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, in press. </span>
 			</li>
   				<li >
   					Close evaluation for layer potentials in three dimensions, <br>
-  			 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, submitted. </span>
+  			  <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, <span class='author'>R. Cortes</span>, <span class='author'>C. Carvalho</span>, submitted. </span>
   				</li>
   				<li >
   					Asymptotic analysis for close evaluation for layer potentials, <br>
@@ -137,6 +137,7 @@
 			</ol>				
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
+			<li >How to accurately compute near-fields in plasmonic structures, Portland State University, 2019.</li>
 			<li >The Singular Complement Method for dielectric-metamaterial transmission problems, MAFELAP, London, 2019.</li>
 			<li >Asymptotic approximations for transmission boundary-value problems in plasmonic structures, EMTS, San Diego, 2019.</li>
 			<li >Asymptotic approximations of near-fields in plasmonic structures, AMS Spring and Central and Western Sectional Meeting, Hawaii, 2019.</li>
