--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <img src="img/photos/14.jpg" width="130" class="floatLeft">
           </div>
           <p>
-    	      I'm assistant professor in the Applied Math Unit at the University of California Merced.
+    	      I'm an Assistant Professor in the Applied Math Unit at the University of California Merced.
   		  I'm interested in developing new efficient numerical methods for interface problems, specially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems. I have been developing a finite-element based method to accurately capture the near-field in plasmonic structures, and work on integral representation methods for close evaluation problems.<br><br> <br>
   		     </p>
             <div>
