changed index again

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
           <p>
     	      I'm an Assistant Professor in the Applied Math Unit at the University of California Merced.
-  		  I'm interested in developing new efficient numerical methods for interface problems, specially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems. I have been developing a finite-element based method to accurately capture the near-field in plasmonic structures, and work on integral representation methods for close evaluation problems.<br><br> <br>
+  		  I'm interested in developing new efficient numerical methods for interface problems, specially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems. I have been developing a Finite Element-based method to accurately capture the near-field in plasmonic structures, and work on integral representation methods for close evaluation problems.<br><br> <br>
   		     </p>
             <div>
     		<a href="FEM.html"><img src="img/summary_pmls.png" width="190"></a>
