add zois website

--- a/group.html
+++ b/group.html
@@ -70,7 +70,7 @@
      	 <h1>Group</h1>
 		
 		<h4>Postdocs</h4>
-		 <li><img src="img/zois.png" width="100">   Zois Moitier</li>
+		 <li><img src="img/zois.png" width="100">   <a href="http://zmoitier.github.io/" title="Visit FullAhead">Zois Moitier</a></li>
 	   <h4>Graduate students</h4>
 	 <li><img src="img/photos/guy.jpg" width="100">   Benjamin Latham</li>
 	 <li><img src="img/llewis.jpeg" width="100">   Lori Lewis (master's student, co-advised)</li>
