--- a/group.html
+++ b/group.html
@@ -68,6 +68,7 @@
     <div id="page">
 
      	 <h1>Group</h1>
+		 <img src="img/logo_group_research.png" width="600">
 		
 		<h4>Postdocs</h4>
 		 <li><img src="img/zois.png" width="100">   <a href="http://zmoitier.github.io/" title="Visit FullAhead">Zois Moitier</a></li>
