--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
 
           <h1>Presentation</h1>
           <div class="width25 floatLeft">
-      <img src="img/photos/14.jpg" width="130" class="floatLeft">
+      <img src="img/photos/14.jpg" width="125" class="floatLeft">
           </div>
           <p>
-    	      I'm an Assistant Professor in the Applied Math Unit at the University of California Merced.
-  		  I'm interested in developing new efficient numerical methods for interface problems, specially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems. I have been developing a Finite Element-based method to accurately capture the near-field in plasmonic structures, and work on integral representation methods for close evaluation problems.<br><br> <br>
+    	      I'm an Assistant Professor in the Department of Applied Mathematics at the University of California Merced.
+  		  I'm interested in developing new efficient numerical methods for interface problems, especially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems, Finite Element-based methods to accurately capture near-fields in plasmonic structures, integral equation methods for close evaluation problems. <br><br> 
   		     </p>
+			 <img src="img/logo_group_research.png" width="500">
             <div>
     		<a href="FEM.html"><img src="img/summary_pmls.png" width="190"></a>
             <a href="FEM.html"><img src="img/Triangle_Tconform.jpg" width="150"></a>
@@ -91,7 +92,9 @@
   		 <li>Patrick Ciarlet (POEMS)</li>
   		 <li>Shilpa Khatri (UCM)</li>
   		 <li>Arnold D. Kim (UCM)</li>
-  		 <li>Claire Scheid (NACHOS)</li>
+		 <li>Zoïs Moitier (UCM)</li>
+		 <li>Puttha Sakkaplangkul (IoT Ladkrahang)</li>
+  		 <li>Claire Scheid (ATLANTIS)</li>
 		
   	<h1> Contact</h1>
 			   <div class="width130 floatRight"> 
@@ -101,7 +104,7 @@
   	<p>
   		 ccarvalho3 AT ucmerced dot edu <br>
 		 UC Merced, 5200 N Lake Rd, Merced CA 95343 <br>
-		 Office hours Fall 2019: Monday 1:30pm-3:30pm in ACS 352
+		 Office hours Spring 2020: Monday 2pm-3pm, Wednesday 11:30-12:30 in ACS 352
 		 	  </p>
 			  
 			
