--- a/publis.html
+++ b/publis.html
@@ -79,18 +79,18 @@
 			
 			<a href="https://scholar.google.fr/citations?hl=en&view_op=list_works&gmla=AJsN-F4s6Y5QfmzaG85bYE_3YjvOyf9d7RSY2SOELSdv1tAIyT6rGNfTbWsTTIZpCHOfCP1fHl9ldsp1P8aZisVi00sOdwea3Q&user=RY1F4S8AAAAJ" title="Scholar"><span class="big">P</span>ublications listed on Google Scholar</a>
   			<ol class='publisItems' reversed = "">
-				<li >
-					A fully fourth order accurate energy stable FDTD method for Maxwell's equations in metamaterials, <br>
-			 <span class='author'>P. Sakkaplangkul</span>, <span class='author'>V. Bokil</span>, <span class='author'>C. Carvalho</span>, IEEE Journal on Multiscale and Multiphysics Computational Techniques, 4(2019), pp.260--268. </span>
-				</li>
-			<li >
-				Asymptotic approximations for the close evaluation of double-layer potentials, <br>
-		 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, in press. </span>
-			</li>
   				<li >
   					Close evaluation for layer potentials in three dimensions, <br>
   			  <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, <span class='author'>R. Cortes</span>, <span class='author'>C. Carvalho</span>, submitted. </span>
   				</li>
+				<li >
+					Asymptotic approximations for the close evaluation of double-layer potentials, <br>
+			 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, SIAM Journal for Scientific Computing, 42 (2020), pp A504-A533. </span>
+				</li>
+				<li >
+					A fully fourth order accurate energy stable FDTD method for Maxwell's equations in metamaterials, <br>
+			 <span class='author'>P. Sakkaplangkul</span>, <span class='author'>V. Bokil</span>, <span class='author'>C. Carvalho</span>, IEEE Journal on Multiscale and Multiphysics Computational Techniques, 4(2019), pp.260--268. </span>
+				</li>
   				<li >
   					Asymptotic analysis for close evaluation for layer potentials, <br>
   			 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, Journal of Computational Physics, 655, pp 327-341, 2018. </span>
