update publications on research pages

--- a/eval.html
+++ b/eval.html
@@ -97,19 +97,20 @@ We developed asymptotic approximations methods based matched asymptotic expansio
 	</li>
 	
 	<li >
-		Asymptotic approximations for the close evaluation of double-layer potentials, <br>
- <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, submitted. </span>
+		Close evaluation for layer potentials in three dimensions, <br>
+  <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, <span class='author'>R. Cortes</span>, <span class='author'>C. Carvalho</span>, submitted. </span>
 	</li>
-		<li >
-			Close evaluation for layer potentials in three dimensions, <br>
-	 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, submitted. </span>
-		</li>
+	<li >
+		Asymptotic approximations for the close evaluation of double-layer potentials, <br>
+ <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, SIAM Journal for Scientific Computing, 42, pp A504-A533, 2020. </span>
+	</li>
 		<li >
 			Asymptotic analysis for close evaluation for layer potentials, <br>
 	 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, Journal of Computational Physics, 655, pp 327-341, 2018. </span>
 		</li>
 		
 		<h4>Ongoing projects: </h4>
+		 <li>Asymptotic methods for regions of high curvwture </li>
 		 <li>Applications to Stokes flow</li>
 		 <li>Application to transmission problems</li>	
 
