--- a/eval.html
+++ b/eval.html
@@ -95,10 +95,13 @@ We developed asymptotic approximations methods based matched asymptotic expansio
 	<li >
 		Codes available on <a href="https://github.com/arnolddkim/Asymptotic-DLP"title="GitHub">GitHub.</a>
 	</li>
-	
 	<li >
-		Close evaluation for layer potentials in three dimensions, <br>
-  <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, <span class='author'>R. Cortes</span>, <span class='author'>C. Carvalho</span>, submitted. </span>
+		Layer potential identities and subtraction techniques, 
+  <span class='author'>C. Carvalho</span>, submitted. </span> <br> Codes available on <a href="https://github.com/carvalhocamille/Subtraction_techniques"title="GitHub">GitHub.</a>
+	</li>
+	<li >
+		Close evaluation for layer potentials in three dimensions, 
+  <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, <span class='author'>R. Cortes</span>, <span class='author'>C. Carvalho</span>, in revision. </span>
 	</li>
 	<li >
 		Asymptotic approximations for the close evaluation of double-layer potentials, <br>
