update talks teaching group

--- a/group.html
+++ b/group.html
@@ -74,11 +74,12 @@
 		 <li><img src="img/zois.png" width="100">   <a href="http://zmoitier.github.io/" title="Visit FullAhead">Zois Moitier</a></li>
 	   <h4>Graduate students</h4>
 	 <li><img src="img/photos/guy.jpg" width="100">   Benjamin Latham</li>
-	 <li><img src="img/llewis.jpeg" width="100">   Lori Lewis (master's student, co-advised)</li>
+	 <li><img src="img/ecortes.png" width="100">  Elsie Cortes</li>
 	   <h4>Undergraduate students</h4>
   		 <li><img src="img/photos/guy.jpg" width="100">   You</li>
 		
 		 <h4>Alumni</h4>
+		 <li>Lori Lewis, M.S. 2020</li>
 		 <li>Elsie Cortes (undergraduate student, a year)</li>
 		 <li>Ryan Torres (undergraduate student, 1 semester)</li>
 		 <li>Bianca Garibay (undergraduate student, 1 semester)</li>
@@ -87,7 +88,7 @@
 		 <li>Jacob Stehle (undergraduate student, co-advised, summer)</li>
 		 <h4>Previous Graduate Mentoring</h4>
 		 <li>Matteo Polimeno (1 semester)</li>
-		  <li>Majerle Reeves (2 semesters)</li>
+		 <li>Majerle Reeves (2 semesters)</li>
 
 
 		 
