--- a/publis.html
+++ b/publis.html
@@ -141,6 +141,10 @@
 			</ol>				
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
+		    <li >Subtraction techniques for the close evaluation of layer potentials, SIAM CSE, Spring 2021.</li>
+		    <li >Close evaluation of layer potentials in three dimensions, FSU, Fall 2020.</li>
+		    <li >Subtraction techniques for the close evaluation of layer potentials, Imaging and Sensing seminar, UC Merced, 2020.</li>
+		    <li >Boundary integral methods for optical cloaking, Energy and the Environment seminar, UC Merced, 2019.</li>
 			<li >How to accurately compute near-fields in plasmonic structures, Portland State University, 2019.</li>
 			<li >The Singular Complement Method for dielectric-metamaterial transmission problems, MAFELAP, London, 2019.</li>
 			<li >Asymptotic approximations for transmission boundary-value problems in plasmonic structures, EMTS, San Diego, 2019.</li>
