--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
           <h1>Presentation</h1>
           <div class="width25 floatLeft">
-      <img src="img/photos/14.jpg" width="125" class="floatLeft">
+      <img src="img/photos/new.jpg" width="150" class="floatLeft">
           </div>
           <p>
     	      I'm an Assistant Professor in the Department of Applied Mathematics at the University of California Merced.
