--- a/EnglishVersion.html
+++ b/EnglishVersion.html
@@ -67,7 +67,7 @@
 
         <h1>Presentation</h1>
         <div class="width25 floatLeft">
-    <img src="img/photos/14.jpg" width="130" class="floatLeft">
+    <img src="img/photos/new.jpg" width="150" class="floatLeft">
         </div>
         <p>
   	      I'm assistant professor in the Applied Math Unit at the University of California Merced.
