--- a/recherche.html
+++ b/recherche.html
@@ -15,7 +15,7 @@
 <head>
 
 
-  <title> Carvalho Camille </title>
+  <title> Camille Carvalho </title>
 
   <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
   <meta name="author" content="fullahead.org" />
