--- a/group.html
+++ b/group.html
@@ -73,7 +73,7 @@
 		<h4>Postdocs</h4>
 		 <li><img src="img/zois.png" width="100">   <a href="http://zmoitier.github.io/" title="Visit FullAhead">Zois Moitier</a></li>
 	   <h4>Graduate students</h4>
-	 <li><img src="img/photos/guy.jpg" width="100">   Benjamin Latham</li>
+	 <li><img src="img/photos/blatham.jpg" width="100">   Benjamin Latham</li>
 	 <li><img src="img/ecortes.png" width="100">  Elsie Cortes</li>
 	   <h4>Undergraduate students</h4>
   		 <li><img src="img/photos/guy.jpg" width="100">   You</li>
