--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <!-- #header: holds site title and subtitle -->
       <div id="header">
-        <h1><span class="big darkBrown">C</span>arvalho <span class="big darkBrown">C</span>amille</h1>
+      <h1><span class="big darkBrown">C</span>amille<span class="big darkBrown">C</span>arvalho</h1>
       </div>
 
 
