edit webpage group

--- a/group.html
+++ b/group.html
@@ -69,14 +69,35 @@
 
      	 <h1>Group</h1>
 		 <img src="img/logo_group_research.png" width="600">
-		
-		<h4>Postdocs</h4>
-		 <li><img src="img/zois.png" width="100">   <a href="http://zmoitier.github.io/" title="Visit FullAhead">Zois Moitier</a></li>
-	   <h4>Graduate students</h4>
-	 <li><img src="img/photos/blatham.jpg" width="100">   Benjamin Latham</li>
-	 <li><img src="img/ecortes.png" width="100">  Elsie Cortes</li>
-	   <h4>Undergraduate students</h4>
-  		 <li><img src="img/photos/guy.jpg" width="100">   You</li>
+
+		      <table>
+        <tbody>
+          <tr>
+			  <td> <img src="img/photos/new.jpg" width="100"></td>
+            <td> <img src="img/zois.png" width="110"></td>
+            <td> <img src="img/photos/blatham.jpg" width="108">  </td>
+			<td>  <img src="img/ecortes.png" width="100"> </td>
+			<td> <img src="img/photos/guy.jpg" width="110"> </td>
+          </tr>
+		  <br>
+          <tr>
+			  <td>Camille Carvalho</td>
+            <td><a href="http://zmoitier.github.io/" title="Visit FullAhead">
+			 Zois Moitier</a></td>
+            <td>Benjamin Latham</td>
+			  <td>Elsie Cortes</td>
+			   <td>You</td>
+          </tr>
+		    <br>
+          <tr>
+			<td>PI</td>
+            <td>Postdoc</td>
+            <td>Graduate Student</td>
+			<td>Graduate Student</td>
+			<td> </td>
+          </tr>
+        </tbody>
+		      </table>
 		
 		 <h4>Alumni</h4>
 		 <li>Lori Lewis, M.S. 2020</li>
