--- a/publis.html
+++ b/publis.html
@@ -85,7 +85,7 @@
     				</li>
   				<li >
   					Close evaluation for layer potentials in three dimensions, 
-  			  <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, <span class='author'>R. Cortes</span>, <span class='author'>C. Carvalho</span>, in revision. </span>
+  			  <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, <span class='author'>R. Cortes</span>, <span class='author'>C. Carvalho</span>, Journal of Computational Physics, accepted. </span>
   				</li>
 				<li >
 					Asymptotic approximations for the close evaluation of double-layer potentials, <br>
