--- a/group.html
+++ b/group.html
@@ -76,7 +76,8 @@
 			  <td> <img src="img/photos/new.jpg" width="100"></td>
             <td> <img src="img/zois.png" width="110"></td>
             <td> <img src="img/photos/blatham.jpg" width="108">  </td>
-			<td>  <img src="img/ecortes.png" width="100"> </td>
+			<td>  <img src="img/ecortes.png" width="105"> </td>
+			<td>  <img src="img/photos/cmccullough.jpg" width="110"> </td>
 			<td> <img src="img/photos/guy.jpg" width="110"> </td>
           </tr>
 		  <br>
@@ -86,6 +87,7 @@
 			 Zois Moitier</a></td>
             <td>Benjamin Latham</td>
 			  <td>Elsie Cortes</td>
+			  <td>Cory McCullough</td>
 			   <td>You</td>
           </tr>
 		    <br>
@@ -94,6 +96,17 @@
             <td>Postdoc</td>
             <td>Graduate Student</td>
 			<td>Graduate Student</td>
+			<td>Graduate Student</td>
+			<td> </td>
+          </tr>
+          <tr>
+			<td></td>
+            <td></td>
+            <td></td>
+			<td>Co-advised with <a href="https://sites.ucmerced.edu/ctsogka" title="Visit FullAhead">
+			 Chrysoula Tsogka</a></td>
+			<td>Co-advised with <a href="https://faculty.ucmerced.edu/adkim/" title="Visit FullAhead">
+			 Ardnol D. Kim</a></td>
 			<td> </td>
           </tr>
         </tbody>
