--- a/group.html
+++ b/group.html
@@ -106,7 +106,7 @@
 			<td>Co-advised with <a href="https://sites.ucmerced.edu/ctsogka" title="Visit FullAhead">
 			 Chrysoula Tsogka</a></td>
 			<td>Co-advised with <a href="https://faculty.ucmerced.edu/adkim/" title="Visit FullAhead">
-			 Ardnol D. Kim</a></td>
+			 Arnold D. Kim</a></td>
 			<td> </td>
           </tr>
         </tbody>
