--- a/group.html
+++ b/group.html
@@ -70,6 +70,7 @@
      	 <h1>Group</h1>
 		 <img src="img/logo_group_research.png" width="600">
 
+		 	<img src="img/clovers_pic.png" width="720">
 		      <table>
         <tbody>
           <tr>
