--- a/group.html
+++ b/group.html
@@ -106,7 +106,7 @@
             <td></td>
 			<td>Co-advised with <a href="https://sites.ucmerced.edu/ctsogka" title="Visit FullAhead">
 			 Chrysoula Tsogka</a></td>
-			<td>Co-advised with <a href="https://faculty.ucmerced.edu/adkim/" title="Visit FullAhead">
+			<td>Advised by <a href="https://faculty.ucmerced.edu/adkim/" title="Visit FullAhead">
 			 Arnold D. Kim</a></td>
 			<td> </td>
           </tr>
