--- a/group.html
+++ b/group.html
@@ -67,34 +67,33 @@
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
 
-     	 <h1>Group</h1>
+     
 		 <img src="img/logo_group_research.png" width="600">
 
 		 	<img src="img/clovers_pic.png" width="720">
+			
+				 <h1>Group</h1>
 		      <table>
         <tbody>
           <tr>
 			  <td> <img src="img/photos/new.jpg" width="100"></td>
-            <td> <img src="img/zois.png" width="110"></td>
             <td> <img src="img/photos/blatham.jpg" width="108">  </td>
-			<td>  <img src="img/ecortes.png" width="105"> </td>
 			<td>  <img src="img/photos/cmccullough.jpg" width="110"> </td>
+			<td>  <img src="img/ecortes.png" width="105"> </td>
+			
 			<td> <img src="img/photos/guy.jpg" width="110"> </td>
           </tr>
 		  <br>
           <tr>
 			  <td>Camille Carvalho</td>
-            <td><a href="http://zmoitier.github.io/" title="Visit FullAhead">
-			 Zois Moitier</a></td>
             <td>Benjamin Latham</td>
+			 <td>Cory McCullough</td>
 			  <td>Elsie Cortes</td>
-			  <td>Cory McCullough</td>
 			   <td>You</td>
           </tr>
 		    <br>
           <tr>
 			<td>PI</td>
-            <td>Postdoc</td>
             <td>Graduate Student</td>
 			<td>Graduate Student</td>
 			<td>Graduate Student</td>
@@ -103,24 +102,51 @@
           <tr>
 			<td></td>
             <td></td>
-            <td></td>
-			<td>Co-advised with <a href="https://sites.ucmerced.edu/ctsogka" title="Visit FullAhead">
-			 Chrysoula Tsogka</a></td>
 			<td>Advised by <a href="https://faculty.ucmerced.edu/adkim/" title="Visit FullAhead">
 			 Arnold D. Kim</a></td>
+			<td>Co-advised with <a href="https://sites.ucmerced.edu/ctsogka" title="Visit FullAhead">
+			 Chrysoula Tsogka</a></td>
 			<td> </td>
           </tr>
         </tbody>
 		      </table>
 		
-		 <h4>Alumni</h4>
-		 <li>Lori Lewis, M.S. 2020</li>
-		 <li>Elsie Cortes (undergraduate student, a year)</li>
-		 <li>Ryan Torres (undergraduate student, 1 semester)</li>
-		 <li>Bianca Garibay (undergraduate student, 1 semester)</li>
-		 <li>Barbara Gomez-Aldrete (undergraduate student, UROC program, co-advised, summer)</li>
-		 <li>Xiaolong Chen (undergraduate student, summer)</li>
-		 <li>Jacob Stehle (undergraduate student, co-advised, summer)</li>
+		 <h1>Alumni</h1>
+		     <table>
+         <tbody>
+           <tr>
+<td> <img src="img/zois.png" width="110"></td>
+<td> <img src="img/llewis.jpeg" width="110"></td>
+<td> <img src="img/photos/guy.jpg" width="110"> </td>
+<td> <img src="img/bgaribay_mcm.jpg" width="110"> </td>
+<td> <img src="img/barbara.png" width="110"> </td>
+<td> <img src="img/Harry.jpg" width="110"> </td>
+<td> <img src="img/jacob.jpg" width="110"> </td>
+          </tr>
+		    <br>
+          <tr>
+         <td><a href="http://zmoitier.github.io/" title="Visit FullAhead">
+		 Zois Moitier</a></td>
+		 <td> Lori Lewis </td>
+		  <td> Ryan Torres </td>
+		   <td> Bianca Garibay  </td>
+		    <td>Barbara Gomez-Aldrete</td>
+			  <td>Xiaolong Chen</td>
+			    <td>Jacob Stehle</td>
+			
+         </tr>
+	    <br>
+         <tr>
+			 <td> Postdoc (11/19 -- 10/20) </td>
+		 <td> M.S. 2020 (co-advised)</td>
+		  <td> Undergraduate student</td>
+		   <td> Undergraduate student</td>
+		    <td> Undergraduate student (UROC, co-advised)</td>
+			 <td> Undergraduate student</td>
+			  <td> Undergraduate student (co-advised)</td>
+           </tr>
+         </tbody>
+		      </table>
 		 <h4>Previous Graduate Mentoring</h4>
 		 <li>Matteo Polimeno (1 semester)</li>
 		 <li>Majerle Reeves (2 semesters)</li>
