--- a/publis.html
+++ b/publis.html
@@ -79,40 +79,52 @@
 			
 			<a href="https://scholar.google.fr/citations?hl=en&view_op=list_works&gmla=AJsN-F4s6Y5QfmzaG85bYE_3YjvOyf9d7RSY2SOELSdv1tAIyT6rGNfTbWsTTIZpCHOfCP1fHl9ldsp1P8aZisVi00sOdwea3Q&user=RY1F4S8AAAAJ" title="Scholar"><span class="big">P</span>ublications listed on Google Scholar</a>
   			<ol class='publisItems' reversed = "">
+				
+				<h2>2020 </h2>
+  				<li >
+  					Asymptotics for metamaterial cavities and their effect on scattering, 
+  			  <span class='author'>C. Carvalho</span>,   <span class='author'>Z. Moitier</span> submitted. </span>
+  				</li>
     				<li >
     					Layer potential identities and subtraction techniques, 
     			  <span class='author'>C. Carvalho</span>, submitted. </span>
     				</li>
   				<li >
   					Close evaluation for layer potentials in three dimensions, 
-  			  <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, <span class='author'>R. Cortes</span>, <span class='author'>C. Carvalho</span>, Journal of Computational Physics, accepted. </span>
+  			  <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, <span class='author'>R. Cortes</span>, <span class='author'>C. Carvalho</span>, Journal of Computational Physics, 423 (2020), 109798. </span>
   				</li>
 				<li >
-					Asymptotic approximations for the close evaluation of double-layer potentials, <br>
+					Asymptotic approximations for the close evaluation of double-layer potentials, 
 			 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, SIAM Journal for Scientific Computing, 42 (2020), pp A504-A533. </span>
 				</li>
+				<h2>2019 </h2>
 				<li >
-					A fully fourth order accurate energy stable FDTD method for Maxwell's equations in metamaterials, <br>
+					A fully fourth order accurate energy stable FDTD method for Maxwell's equations in metamaterials, 
 			 <span class='author'>P. Sakkaplangkul</span>, <span class='author'>V. Bokil</span>, <span class='author'>C. Carvalho</span>, IEEE Journal on Multiscale and Multiphysics Computational Techniques, 4(2019), pp.260--268. </span>
 				</li>
+				<h2>2018 </h2>
   				<li >
-  					Asymptotic analysis for close evaluation for layer potentials, <br>
+  					Asymptotic analysis for close evaluation for layer potentials, 
   			 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, Journal of Computational Physics, 655, pp 327-341, 2018. </span>
   				</li>
 	  			<li >
-	  				Mesh requirements for the finite element approximation of problems with sign-changing coefficients,<br>
+	  				Mesh requirements for the finite element approximation of problems with sign-changing coefficients,
 	  			<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho, <span class='author'>P. Ciarlet Jr.</span>, Numerische Mathematik, pp 1-38, 2018.
 	  			</li>	
+				<h2>2017 </h2>
   				<li >
-  					Eigenvalue problems with sign-changing coefficients,<br>
+  					Eigenvalue problems with sign-changing coefficients,
   			 <span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>, Compte Rendus Mathématiques, 355 (6), pp 671-675, 2017. </span>
   				</li>
+				<h2>2016 </h2>
   			<li >
-  				On the use of Perfectly Matched Layers at corners for scattering problems with sign-changing coefficients,<br>
+  				On the use of Perfectly Matched Layers at corners for scattering problems with sign-changing coefficients,
   			<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>, Journal of Computational Physics, 322, pp 224-247, 2016. </li>		
   			</li>	
+			
+			<h2>2013 </h2>
   			<li >
-  				Plasmonic cavity modes: black-hole phenomena captured by Perfectly Matched Layers,<br>
+  				Plasmonic cavity modes: black-hole phenomena captured by Perfectly Matched Layers,
   				<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>, PROCEEDING of PIERS 2013 in Stockholm, pp 638-642, 2013. </span>			
   			</ol>
 			
