edits index group teaching

--- a/group.html
+++ b/group.html
@@ -127,7 +127,7 @@
           <tr>
          <td><a href="http://zmoitier.github.io/" title="Visit FullAhead">
 		 Zois Moitier</a></td>
-		 <td> Lori Lewis </td>
+		 <td> <a href="https://portfolium.com/llewis6"> Lori Lewis </a></td>
 		  <td> Ryan Torres </td>
 		   <td> Bianca Garibay  </td>
 		    <td>Barbara Gomez-Aldrete</td>
@@ -139,11 +139,11 @@
          <tr>
 			 <td> Postdoc (11/19 -- 10/20) </td>
 		 <td> M.S. 2020 (co-advised)</td>
-		  <td> Undergraduate student</td>
-		   <td> Undergraduate student</td>
-		    <td> Undergraduate student (UROC, co-advised)</td>
-			 <td> Undergraduate student</td>
-			  <td> Undergraduate student (co-advised)</td>
+		  <td> Undergraduate student (1 semester)</td>
+		   <td> Undergraduate student (1 semester)</td>
+		    <td> Undergraduate student (UROC, co-advised, 1 summer)</td>
+			 <td> Undergraduate student (1 summer)</td>
+			  <td> Undergraduate student (co-advised, 1 summer)</td>
            </tr>
          </tbody>
 		      </table>
