--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   		 <li>Patrick Ciarlet (POEMS)</li>
   		 <li>Shilpa Khatri (UCM)</li>
   		 <li>Arnold D. Kim (UCM)</li>
-		 <li>Zoïs Moitier (UCM)</li>
+		 <li>Zoïs Moitier (KIT)</li>
 		 <li>Puttha Sakkaplangkul (IoT Ladkrahang)</li>
   		 <li>Claire Scheid (ATLANTIS)</li>
 		
@@ -104,13 +104,14 @@
   	<p>
   		 ccarvalho3 AT ucmerced dot edu <br>
 		 UC Merced, 5200 N Lake Rd, Merced CA 95343 <br>
-		 Office hours Spring 2020: Monday 2pm-3pm, Wednesday 11:30-12:30 in ACS 352
 		 	  </p>
-			  
-			
+			  		
 	 
-
-
+<h1> Funding provided by </h1>
+            <div>
+    		<a href="https://www.nsf.gov/"><img src="img/NSF-logo.png" width="110"></a>				
+            <a href="https://www.ucmerced.edu/"><img src="img/merced-logo.jpg" width="200"></a>
+		</div>
 
 
       <!-- .footer: the site footer text, links and whatever else -->
