--- a/Teaching.html
+++ b/Teaching.html
@@ -66,6 +66,10 @@
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
+		<h2>Spring 2021 </h2>
+        <ul>
+		  <li>Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=6&coid=12511"> Math 150</a>: Mathematical modeling, at UC Merced</li>
+	    </ul>
   		<h2>Fall 2020 </h2>
           <ul>
   		  <li>Instructor for Math 24 : Linear Algebra and Differential Equations, at UC Merced</li>
