edits publi with links

--- a/group.html
+++ b/group.html
@@ -138,7 +138,7 @@
 	    <br>
          <tr>
 			 <td> Postdoc (11/19 -- 10/20) </td>
-		 <td> M.S. 2020 (co-advised)</td>
+		 <td> M.S. 2020 (co-advised) <a href="https://escholarship.org/uc/item/1xw6h0c1"> thesis </a></td>
 		  <td> Undergraduate student (1 semester)</td>
 		   <td> Undergraduate student (1 semester)</td>
 		    <td> Undergraduate student (UROC, co-advised, 1 summer)</td>
