--- a/publis.html
+++ b/publis.html
@@ -123,20 +123,20 @@
   				<li >
 					<span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>,
   					Eigenvalue problems with sign-changing coefficients,
-  			  Compte Rendus Mathématiques, 355 (6), pp 671-675, 2017. </span>
+  			  Compte Rendus Mathématiques, 355 (6), pp 671-675, 2017. </span>  [<a href="https://hal.archives-ouvertes.fr/hal-01394856" title="KKCC20"><span class="big">P</span>reprint</a>]
   				</li>
 				<h2>2016 </h2>
   			<li >
 				<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>,
   				On the use of Perfectly Matched Layers at corners for scattering problems with sign-changing coefficients,
-  			 Journal of Computational Physics, 322, pp 224-247, 2016. </li>	[<a href="https://arxiv.org/pdf/1511.01932.pdf" title="CKK18"><span class="big">P</span>reprint</a>]	
+  			 Journal of Computational Physics, 322, pp 224-247, 2016.	[<a href="https://arxiv.org/pdf/1511.01932.pdf" title="CKK18"><span class="big">P</span>reprint</a>]	 </li>
   			</li>	
 			
 			<h2>2013 </h2>
   			<li >
 				<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>,
   				Plasmonic cavity modes: black-hole phenomena captured by Perfectly Matched Layers,
-  				 PROCEEDING of PIERS 2013 in Stockholm, pp 638-642, 2013. </span>			
+  				 PROCEEDING of PIERS 2013 in Stockholm, pp 638-642, 2013. </span>	 		
   			</ol>
 			
   			<h1>Proceedings </h1>
@@ -144,26 +144,32 @@
   				<li >
 					<span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>,
   					Local analysis of near fields in acoustic scattering, 
-  			  <span class='author'>A. D. Kim</span>, WAVES, Minneapolis, 2017. </span>
+  			  <span class='author'>A. D. Kim</span>, WAVES, Minneapolis, 2017. </span> [ <a href="waves_proceeding_17.pdf" title='charger 
+waves_proceeding_17.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Preprint </a> ]
   				</li>
   				<li >
 					<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho</span>, <span class='author'>C. Chambeyron</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>,<span class='author'>A. Nicolet</span>, <span class='author'>F. Zolla</span>,
   					Curious energy losses at corners of metallic inclusions,
-  			 WAVES, Karlsruhe, 2015.
+  			 WAVES, Karlsruhe, 2015. [ <a href="final_BCC_abstract_waves.pdf" title='charger 
+final_BCC_abstract_waves.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Preprint </a> ]
   				</li>
   			<li >
 				<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho, <span class='author'>P. Ciarlet Jr.</span>,
   				Plasmonic waveguides: T-coercivity approach for Maxwell's equations,
-  			 WAVES, Karlsruhe, 2015.
+  			 WAVES, Karlsruhe, 2015.[ <a href="proceeding_dissipation.pdf" title='charger 
+proceeding_dissipation.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Preprint </a> ]
   			</li>
   			<li >
 				<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>, <span class='author'>X. Claeys</span>,
   				Plasmonic cavity modes: black-hole phenomena captured by Perfectly Matched Layers,
-  				 PIERS, Stockholm, 2013. </li>	
+  				 PIERS, Stockholm, 2013. [ <a href="2013-proc-uma1367-PIERSFullPaperCarvalho.pdf" title='charger 
+2013-proc-uma1367-PIERSFullPaperCarvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Preprint </a> ]
+			 </li>	
   			<li >
 				<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>, <span class='author'>X. Claeys</span>,
   				Plasmonic cavity modes with sign-changing permittivity,
-  			 WAVES, Tunis, 2013. </li>		
+  			 WAVES, Tunis, 2013.  [ <a href="Waves13_carvalho.pdf" title='charger 
+Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Preprint </a> ]</li>		
 				
 			</ol>				
 			
@@ -173,6 +179,11 @@
 				
 		    <span >&nbsp;&nbsp;</span> [ <a href="These_carvalho.pdf" title='charger These_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;	<span >&nbsp;&nbsp;</span> [ <a href="these_carvalho_soutenance.pdf" title='charger these_carvalho_soutenance.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Defense </a> ] &nbsp;&nbsp;</li>
 			
+			
+  			<h1>Codes</h1>
+  			<ol class='publisItems' reversed = "">
+				 <li > <a href="https://github.com/arnolddkim/Asymptotic-DLP"title="DLP">[Asymptotic methods for the close evaluation problem]</a></li>
+				  <li > <a href="https://zenodo.org/record/3934284"title="ST">[Subtraction techniques for the close evaluation problem]</a></li>
 			
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
