--- a/publis.html
+++ b/publis.html
@@ -79,7 +79,7 @@
     			  <span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>L. Lewis</span>,  <span class='author'>Z. Moitier</span>, Asymptotic quadrature rules for scattering by slender bodies, in preparation. </span>
     				</li>
       				<li >
-      			  <span class='author'>C. Carvalho</span>, <span class='author'>C. Ciarlet Jr.</span>, <span class='author'>C. Scheid</span>, Limiting amplitude principle and resonances in plasmonic structures with corners: numerical investigation, in preparation. </span>
+      			  <span class='author'>C. Carvalho</span>, <span class='author'>C. Ciarlet Jr.</span>, <span class='author'>C. Scheid</span>, Limiting amplitude principle and resonances in plasmonic structures with corners: numerical investigation, submitted. </span>[<a href="https://hal.archives-ouvertes.fr/hal-03160574/document" title="CM20"><span class="big">P</span>reprint</a>]
       				</li>
   				<li >
   			  <span class='author'>C. Carvalho</span>,   <span class='author'>Z. Moitier</span>, Asymptotics for metamaterial cavities and their effect on scattering, in revision. </span>
