--- a/publis.html
+++ b/publis.html
@@ -76,7 +76,7 @@
 				
 				<h2>2021 </h2>
   				<li >
-  			  <span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>L. Lewis</span>,  <span class='author'>Z. Moitier</span>, Quadrature by Parity Asymptotic eXpansions (QPAX) for scattering by high aspect ratio particles, submitted. </span>[<a href="https://github.com/zmoitier/Scattering_BIE_QPAX" title="CKLMcodes"><span class="big">C</span>odes</a>]
+  			  <span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>L. Lewis</span>,  <span class='author'>Z. Moitier</span>, Quadrature by Parity Asymptotic eXpansions (QPAX) for scattering by high aspect ratio particles, submitted. </span>[<a href="https://arxiv.org/abs/2105.02136" title="CKLM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Scattering_BIE_QPAX" title="CKLMcodes"><span class="big">C</span>odes</a>]
   				</li>
     				<li >
     			  <span class='author'>C. Carvalho</span>, <span class='author'>C. Ciarlet Jr.</span>, <span class='author'>C. Scheid</span>, Limiting amplitude principle and resonances in plasmonic structures with corners: numerical investigation, submitted. </span>[<a href="https://hal.archives-ouvertes.fr/hal-03160574/document" title="CM20"><span class="big">P</span>reprint</a>]
